@@ -40,35 +40,19 @@ void *simport_open() {
 	unlockpt(fd);
 
 	struct termios oldtio;
-	struct termios newtio;
 	tcgetattr(fd,&oldtio);
 	//bzero(&newtio,sizeof(newtio));
 
-	newtio.c_cflag = CS8 | CLOCAL | CREAD; // CBAUD
-	newtio.c_iflag = IGNPAR | ICRNL;
-	newtio.c_oflag = 0;
-	newtio.c_lflag = ICANON;
+	oldtio.c_cflag = CS8 | CLOCAL | CREAD; // CBAUD
+	oldtio.c_iflag = IGNPAR; // | ICRNL;
+	oldtio.c_oflag = 0;
+	oldtio.c_lflag = ICANON;
         
-	newtio.c_cc[VINTR]    = 0;     /* Ctrl-c */ 
-	newtio.c_cc[VQUIT]    = 0;     /* Ctrl-\ */
-	newtio.c_cc[VERASE]   = 0;     /* del */
-	newtio.c_cc[VKILL]    = 0;     /* @ */
-	newtio.c_cc[VEOF]     = 4;     /* Ctrl-d */
-	newtio.c_cc[VTIME]    = 0;     /* inter-character timer unused */
-	newtio.c_cc[VMIN]     = 1;     /* blocking read until 1 character arrives */
-	// newtio.c_cc[VSWTC]    = 0;     /* '\0' */
-	newtio.c_cc[VSTART]   = 0;     /* Ctrl-q */ 
-	newtio.c_cc[VSTOP]    = 0;     /* Ctrl-s */
-	newtio.c_cc[VSUSP]    = 0;     /* Ctrl-z */
-	newtio.c_cc[VEOL]     = 0;     /* '\0' */
-	newtio.c_cc[VREPRINT] = 0;     /* Ctrl-r */
-	newtio.c_cc[VDISCARD] = 0;     /* Ctrl-u */
-	newtio.c_cc[VWERASE]  = 0;     /* Ctrl-w */
-	newtio.c_cc[VLNEXT]   = 0;     /* Ctrl-v */
-	newtio.c_cc[VEOL2]    = 0;     /* '\0' */
+	oldtio.c_cc[VEOL]     = '\r';     /* '\0' */
+	oldtio.c_cc[VEOL2]    = 0;     /* '\0' */
 
 	tcflush(fd,TCIFLUSH);
-	tcsetattr(fd,TCSANOW,&newtio);
+	tcsetattr(fd,TCSANOW,&oldtio);
 	fcntl(fd,F_SETFL,O_NONBLOCK); // O_NONBLOCK + fdopen/stdio == bad
 
 	FILE *f = fdopen(fd, "r+");
